--- a/index.html
+++ b/index.html
@@ -59,5 +59,5 @@ Now what are the possibilities of warp drive? Cmdr Riker's nervous system has be
       <aside id="right">Right Content Here</aside>
     </section>
   </body>
-  <script type="text/javascript" src="events.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </html>
