--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>BusMall Marketing Widget</h1>
+      <h1>Hello Greg!</h1>
     </header>
     <section>
       <nav id="buttons">
