--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/layout.css">
   </head>
   <body>
     <header>
@@ -13,6 +12,7 @@
       <nav id="buttons">
           <button type ="button" onclick="genReport()">See Your Results?</button>
           <button type ="button" onclick="another15()">15 More Votes?</button>
+          <button type ="button" onclick="newPlayer()">New Player? (beta version)</button>
           <button type ="button" onclick="quitApp()">Quit?</button>
       </nav>
     </section>
@@ -26,8 +26,7 @@
       <h3 id="questionsAsked"></h3>
      </section>
      <div id="chart-container"></div>
-    <!-- <section id="table">
-    </section> -->
+    <footer> Programmed by Greg Katchmar with assistance from <a href="https://github.com/butlera10">Aaron Butler</footer>
   </body>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/canvasjs.min.js"></script>
