--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <body>
     <header>
     <h1>BusMall Marketing Widget</h1>
+      <p>Programmed by Greg Katchmar with assistance from <a href="https://github.com/butlera10">Aaron Butler</a></p>
     </header>
     <section>
       <nav id="buttons">
           <button type ="button" onclick="genReport()">See Your Results?</button>
           <button type ="button" onclick="another15()">15 More Votes?</button>
-          <button type ="button" onclick="newPlayer()">New Player? (beta version)</button>
+          <button type ="button" onclick="newPlayer()">New Player?</button>
           <button type ="button" onclick="quitApp()">Quit?</button>
+          <button  id = "market" type ="button" onclick="marketing()">Marketer Report</button>
       </nav>
     </section>
     <section id="main">
@@ -26,7 +28,6 @@
       <h3 id="questionsAsked"></h3>
      </section>
      <div id="chart-container"></div>
-    <footer> Programmed by Greg Katchmar with assistance from <a href="https://github.com/butlera10">Aaron Butler</footer>
   </body>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/canvasjs.min.js"></script>
