--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
     <h1>BusMall Marketing Widget</h1>
-      <p>Programmed by Greg Katchmar with assistance from <a href="https://github.com/butlera10">Aaron Butler</a></p>
+      <p>By Greg Katchmar with assistance from <a href="https://github.com/butlera10">Aaron Butler</a> and <a href="https://github.com/jjj430">Rosemary Joe</a></p>
     </header>
     <section>
       <nav id="buttons">
